--- a/.github/workflows/main_appnextjs-win.yml
+++ b/.github/workflows/main_appnextjs-win.yml
@@ -27,17 +27,20 @@ jobs:
           npm run build --if-present
           npm run test --if-present
       
+      - name: List files after build
+        run: |
+          ls
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
+          name: node-app-1
           path: |
             .  # Incluye todos los archivos del proyecto
-            .next  # Asegura que .next esté incluido en el paquete
 
-      - name: list
+      - name: List files after build
         run: |
-          ls 
+          ls
 
   deploy:
     runs-on: ubuntu-latest
@@ -50,17 +53,17 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: node-app
+          name: node-app-1
 
-      - name: list artifact
+      - name: List artifact content
         run: |
           ls -la
-      
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'appnextjs-win'
           slot-name: 'Production'
-          package: .
+          package: .  # Debería funcionar bien si todo el contenido está allí
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_9C5B89482E584E18A5E5EB3E761A5E6A }}
