--- a/.github/workflows/main_appnextjs-win.yml
+++ b/.github/workflows/main_appnextjs-win.yml
@@ -26,17 +26,20 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+          pwd
       
       - name: List files after build
         run: |
           ls
+          pwd
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app-1
           path: |
-            .  # Incluye todos los archivos del proyecto
+            pwd
+            .next/**, package.json, public/**, src/**, node_modules/**, eslint.config.mjs, next.config.mjs, package-lock.json, package.json, README.md
 
       - name: List files after build
         run: |
@@ -54,9 +57,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app-1
+        run: pwd
+          
 
       - name: List artifact content
         run: |
+          pwd
           ls -la
 
       - name: 'Deploy to Azure Web App'
